fix final semoga

--- a/Main/libs/screens/profile.kv
+++ b/Main/libs/screens/profile.kv
@@ -129,7 +129,9 @@
                             id: username_label
                             text: "Guest"
                             halign: "center"
-                            font_style: "Headline"
+                            # font_style: "Headline" # Override KivyMD style
+                            font_name: "Poppins-Bold"
+                            font_size: "24sp"
                             role: "small"
                             bold: True
                             adaptive_height: True
